--- a/site/index.html
+++ b/site/index.html
@@ -1,14 +1,48 @@
 <!DOCTYPE html>
 <html>
+
 <head>
+	<meta charset="utf-8">
 	<title>Hello Coursera</title>
 </head>
+
 <body>
 	<h1>
 		Hello Coursera! I am Mubasheer
 	</h1>
+	
 	<header>
 		My name is MUBASHEER AHMED and I am from Hyderabad, Studying in Muffakham Jah College Of Engineering And Technology.
+		<!--nav id="M">end of the page</nav-->
 	</header>
+	
+	<aside>aside - some info related to the main topic, 
+	ie.,related posts </aside>
+	
+	<div>
+		<hr>
+	</div>
+
+	<section>
+		SECTION 1
+		<h3>
+			My Friend Ahmed is pagal
+		</h3>
+		<h3>
+			Even Stupid
+		</h3>
+	</section>
+	
+	<div>
+		<hr>
+	</div>
+	
+	<section>
+		SECTION 2
+		<h3 id="M">
+			I have no real friends
+		</h3>
+	</section>
+
 </body>
 </html>
