--- a/site/index.html
+++ b/site/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<h1>
+	<h1 id="top">
 		Hello Coursera! I am Mubasheer
 	</h1>
 	
@@ -16,9 +16,17 @@
 		<!--nav id="M">end of the page</nav-->
 	</header>
 	
-	<aside>aside - some info related to the main topic, 
-	ie.,related posts </aside>
-	
+	<aside>
+		<b><u>
+		<a href="https://www.instagram.com/upsanddowns_foru/" target="_blank" title="MY INSTAGRAM">GO TO MY INSTA HANDLE</a>
+		</u></b>
+	</aside>
+	<!-- <aside>aside - some info related to the main topic, 
+	ie.,related posts </aside> -->
+
+	<u><a href="link.html"
+	target="_blank" title="NEW LINK"> GO TO NEW PAGE </a></u>
+	<!-- TARGET="_BLANK" IS USED TO OPEN THE LINK IN NEW TAB -->
 	<div>
 		<hr>
 	</div>
@@ -26,7 +34,7 @@
 	<section>
 		SECTION 1
 		<h3>
-			My Friend Ahmed is pagal
+			<u>My Friend Ahmed is pagal</u>
 		</h3>
 		<h3>
 			Even Stupid
@@ -39,10 +47,69 @@
 	
 	<section>
 		SECTION 2
-		<h3 id="M">
+		<h3>
 			I have no real friends
 		</h3>
 	</section>
+
+	<div>
+		<hr>
+	</div>
+
+	<section>
+		SECTION 3
+		<h3>
+			UN ORDERED LIST OF MY FRIENDS AND THEIR FRIENDS
+		</h3>
+		<ul>
+			<li>AHMED
+				<ul>
+					<li>KAIF</li>
+					<li>SHARFEE</li>
+					<li>HASEEB</li>
+				</ul>
+			</li>
+			<li>BILAL</li>
+			<LI>MUJAHED</LI>
+			<LI>KARTHIK
+				<ul>
+					<li>sharjil</li>
+				</ul>
+			</LI>
+		</ul>
+	</section>
+
+	<div>
+		<hr>
+	</div>
+
+	<section>
+		SECTION 4
+		<h3>ORDERED LIST OF MY FRIENDS AND THEIR FRIENDS</h3>
+		<Ol>
+			<li>AHMED
+				<Ol>
+					<li>KAIF</li>
+					<li>SHARFEE</li>
+					<li>HASEEB</li>
+				</Ol>
+			</li>
+			<li>BILAL</li>
+			<LI>MUJAHED</LI>
+			<LI>KARTHIK
+				<Ol>
+					<li>sharjil</li>
+				</Ol>
+			</LI>
+		</Ol>
+	</section>
+
+	<div>
+		<hr>
+	</div>
+
+	<a href="#top">GO TO TOP</a>
+	<footer>thank you 2020</footer>
 
 </body>
 </html>
