assignment work prewiew

--- a/site/index.html
+++ b/site/index.html
@@ -3,17 +3,16 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Hello Coursera</title>
+	<title>Hello Mubasheer</title>
 </head>
 
 <body>
 	<h1 id="top">
-		Hello Coursera! I am Mubasheer
+		Hello! I am Mubasheer
 	</h1>
 	
 	<header>
-		My name is MUBASHEER AHMED and I am from Hyderabad, Studying in Muffakham Jah College Of Engineering And Technology.
-		<!--nav id="M">end of the page</nav-->
+		<p> My name is MUBASHEER AHMED and I am from Hyderabad, Studying in Muffakham Jah College Of Engineering And Technology. </p>
 	</header>
 	
 	<aside>
@@ -32,32 +31,20 @@
 	</div>
 
 	<section>
+		Firstly,
+		<p>
+			I AM SURE YOU WOULD LIKE ME IF YOU WORK WITH ME
+			<br>
+			I HOPE SO
+		</p>
+	</section>
+	
+	<div>
+		<hr>
+	</div>
+
+	<section>
 		SECTION 1
-		<h3>
-			<u>My Friend Ahmed is pagal</u>
-		</h3>
-		<h3>
-			Even Stupid
-		</h3>
-	</section>
-	
-	<div>
-		<hr>
-	</div>
-	
-	<section>
-		SECTION 2
-		<h3>
-			I have real friends
-		</h3>
-	</section>
-
-	<div>
-		<hr>
-	</div>
-
-	<section>
-		SECTION 3
 		<h3>
 			UN ORDERED LIST OF MY FRIENDS AND THEIR FRIENDS
 		</h3>
@@ -84,7 +71,7 @@
 	</div>
 
 	<section>
-		SECTION 4
+		SECTION 2
 		<h3>ORDERED LIST OF MY FRIENDS AND THEIR FRIENDS</h3>
 		<Ol>
 			<li>AHMED
@@ -108,8 +95,16 @@
 		<hr>
 	</div>
 
+	<section>
+		SECTION 3
+		<h3>
+			THE LINK TO CONNECT WITH ME
+		</h3>
+		<p>At the TOP of thiss page there is a link which redirects you  to my Instagram profile. I hope you would even love to Motivational Content uploaded on the page by me and my team.</p>
+	</section>
+
 	<a href="#top">GO TO TOP</a>
-	<footer>thank you 2020</footer>
+	<footer>Thank you 2020 &copy;</footer>
 
 </body>
 </html>
