--- a/site/index.html
+++ b/site/index.html
@@ -11,7 +11,7 @@
 	<h1 id="top">
 		Hello! I am Mubasheer
 	</h1>
-	<img src="C:\Users\hp\Desktop\mubasheer.jpeg">
+	<img src="site/mubasheer.jpeg">
 	
 	<header>
 		<p> My name is MUBASHEER AHMED and I am from Hyderabad, Studying in Muffakham Jah College Of Engineering And Technology. </p>
