--- a/site/index.html
+++ b/site/index.html
@@ -4,10 +4,15 @@
 <head>
 	<meta charset="utf-8">
 	<title>Hello Mubasheer</title>
+	<style>
+		#bg{
+			background-colour: pink;
+		}
+	</style>
 </head>
 
 <body>
-	
+	<div id="bg">
 	<h1 id="top">
 		Hello! I am Mubasheer
 	</h1>
@@ -107,6 +112,6 @@
 	<a href="#top">GO TO TOP</a>
 	<footer>Thank you 2020 &copy;</footer>
 
-
+	</div>
 </body>
 </html>
