--- a/site/index.html
+++ b/site/index.html
@@ -4,15 +4,20 @@
 <head>
 	<meta charset="utf-8">
 	<title>Hello Mubasheer</title>
+	<style >
+		#bg {
+			background-color: pink;
+		}
+	</style>
 </head>
 
 <body>
-	
+
+	<div id="bg">
 	<h1 id="top">
 		Hello! I am Mubasheer
 	</h1>
-	<img src="C:\Users\hp\Desktop\mubasheer.jpeg">
-	
+	<img src="mubasheer.jpeg">	
 	<header>
 		<p> My name is MUBASHEER AHMED and I am from Hyderabad, Studying in Muffakham Jah College Of Engineering And Technology. </p>
 	</header>
@@ -108,6 +113,6 @@
 	<a href="#top">GO TO TOP</a>
 	<footer>Thank you 2020 &copy;</footer>
 
-
+</div>
 </body>
 </html>
